--- a/styles/components/_heroHome.scss
+++ b/styles/components/_heroHome.scss
@@ -18,20 +18,24 @@
 				}
 				.undertitle {
 					margin-top: rem(1);
-					width: 50%;
+					width: 100%;
+
 					display: flex;
 					flex-direction: row;
 					flex-wrap: wrap;
 					justify-content: center;
 					gap: 0;
+					@media (min-width: $from-small) {
+						width: 50%;
+					}
 				}
 			}
-			img {
-				margin-top: rem(5);
-				margin-bottom: rem(5);
-				width: 100%;
-				height: auto;
-			}
+		}
+		img {
+			margin-top: rem(5);
+			margin-bottom: rem(5);
+			width: 100%;
+			height: auto;
 		}
 	}
 }
